unpackaged/main/default/objects/Bank__c/fields/FEE11__c.field-meta.xml
<CustomField>
    <fullName>FEE11__c</fullName>
    <label>FEE11</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>