unpackaged/main/default/objects/Bank__c/fields/FEE2__c.field-meta.xml
<CustomField>
    <fullName>FEE2__c</fullName>
    <label>FEE2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>