unpackaged/main/default/objects/Bank__c/fields/Total_Fee_Collected__c.field-meta.xml
<CustomField>
    <fullName>Total_Fee_Collected__c</fullName>
    <formula>FEE11__c  +  FEE2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Fee Collected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>